# DPIBulletHellRe

./: .gitignore  CMakeLists.txt  README.md
Assets/Icons/: DPIBHSelectSubjectButton.json  DPIBHStageSelectButton.json  TestTimeIcon.json
Assets/Player/: DPIBHPlayer.json  PlayerProjectile.json  PlayerProjectile1.json
Assets/Teachers/: BPIBHJulio.json  DPIBHAndre.json  DPIBHRicardo.json  DPIBHSalles.json
Assets/Teachers/Projectiles/: Capivara.json  DPIBHRicardoBit0.json  DPIBHRicardoProjectile.json  DPIBHSallesCapivara.json  DPIBHSallesDuplamente.json
Source/: AttackStrategy.cpp  AttackStrategy.h  AudioSystem.cpp  AudioSystem.h  Font.h  Game.cpp  Game.h  Json.h  main.cpp
Source/Actors/: Actor.cpp  Actor.h  Projectile.cpp  Projectile.h  ProjectileFactory.cpp  ProjectileFactory.h  StageSelectButton.cpp  StageSelectButton.h
Source/Actors/Buttons/: Button.cpp  Button.h  StageSelectButton.cpp  StageSelectButton.h
Source/Actors/Player/: Player.cpp  Player.h  PlayerProjectile.cpp  PlayerProjectile.h  Projectile.cpp  Projectile.h
Source/Actors/Teacher/: Boss.cpp  Boss.h  BossAttackState.cpp  BossAttackState.h  Ricardo.cpp  Ricardo.h  Salles.cpp  Salles.h
Source/Actors/Teacher/BossAttackStrategies/: Behaviors.cpp  Behaviors.h
Source/Actors/Teacher/BossAttackStrategies/BaseStrategies/: AngledAttack.cpp  AngledAttack.h  AngledFilledAttack.cpp  AngledFilledAttack.h  CircularSpreadAttack.cpp  CircularSpreadAttack.h  WaveAttack.cpp  WaveAttack.h
Source/Actors/Teacher/BossAttackStrategies/Decorators/: HomingDecorator.cpp  HomingDecorator.h
Source/Actors/Teacher/BossFactory/: Boss1Factory.cpp  Boss1Factory.h  BossFactory.cpp  BossFactory.h  IBossFactory.cpp  IBossFactory.h  SallesFactory.cpp  SallesFactory.h
Source/Actors/Teacher/BossFactory/BossProjectileFactory/: Boss1Projectile1Factory.cpp  Boss1Projectile1Factory.h  SallesProjectile1Factory.cpp  SallesProjectile1Factory.h
Source/Actors/Teacher/BossStates/: BossState.cpp  BossState.h  StartState.cpp  StartState.h  StateOne.cpp  StateOne.h  StateThree.cpp  StateThree.h  StateTwo.cpp  StateTwo.h
Source/Actors/Teacher/Bosses/: Salles.cpp  Salles.h
Source/Actors/Teacher/Bosses/BossesProjectiles/: BossProjectile.cpp  BossProjectile.h  SallesBossProjectile.cpp  SallesBossProjectile.h
Source/Actors/Teachers/: Boss.cpp  Boss.h  BossAttackState.cpp  BossAttackState.h  ExtraPointItem.cpp  ExtraPointItem.h
Source/Actors/Teachers/BossFactory/: AllFactories.h  AndreFactory.cpp  AndreFactory.h  IBossFactory.cpp  IBossFactory.h  RicardoFactory.cpp  RicardoFactory.h  SallesFactory.cpp  SallesFactory.h
Source/Actors/Teachers/BossFactory/BossProjectileFactory/: AndreBaloonProjectileFactory.cpp  AndreBaloonProjectileFactory.h  AndreProjectile1Factory.cpp  AndreProjectile1Factory.h  RicardoProjectile1Factory.cpp  RicardoProjectile1Factory.h  SallesDoubleListProjectileFactory.cpp  SallesDoubleListProjectileFactory.h  SallesProjectile1Factory.cpp  SallesProjectile1Factory.h
Source/Actors/Teachers/Bosses/: Andre.cpp  Andre.h  Ricardo.cpp  Ricardo.h  Salles.cpp  Salles.h
Source/Actors/Teachers/Bosses/BossesProjectiles/: AndreBaloonProjectile.cpp  AndreBaloonProjectile.h  AndreBossProjectile.cpp  AndreBossProjectile.h  BossProjectile.cpp  BossProjectile.h  RicardoBossProjectile.cpp  RicardoBossProjectile.h  SallesBossProjectile.h  SallesDoubleListProjectile.cpp  SallesDoubleListProjectile.h
Source/Attacks/: AttackState.cpp  AttackState.h  Behaviors.cpp  Behaviors.h  IAttackStrategy.h  IMovementStrategy.h
Source/Attacks/AttackParameters/: AttackParams.h  BaloonAttackParams.h
Source/Attacks/BaseStrategies/: AngledAttack.cpp  AngledAttack.h  BaloonAttack.cpp  BaloonAttack.h  CircleSpreadAttack.cpp  CircleSpreadAttack.h  LaserAttack.cpp  LaserAttack.h  WaveAttack.cpp  WaveAttack.h
Source/Components/: Component.cpp  Component.h  RigidBodyComponent.cpp  RigidBodyComponent.h
Source/Components/AIComponents/: FSMComponent.cpp  FSMComponent.h  FSMState.cpp  FSMState.h
Source/Components/ColliderComponents/: CircleColliderComponent.cpp  CircleColliderComponent.h  ColliderComponent.cpp  ColliderComponent.h
Source/Components/DrawComponents/: DrawAnimatedComponent.cpp  DrawAnimatedComponent.h  DrawComponent.cpp  DrawComponent.h  DrawSpriteComponent.cpp  DrawSpriteComponent.h  DrawTextComponent.cpp  DrawTextComponent.h  ProgressBarComponent.cpp  ProgressBarComponent.h
Source/Movements/: IMovementStrategy.h  MovementStrategies.cpp  MovementStrategies.h
Source/Scenes/: Battle.cpp  Battle.h  MainMenu.cpp  MainMenu.h  Scene.cpp  Scene.h  StageSelect.cpp  StageSelect.h
Source/Scenes/Battle/: Battle.cpp  Battle.h  BattleHUD.cpp  BattleHUD.h  ProjectileManager.cpp  ProjectileManager.h
